# nt

./: .gitignore  Cargo.toml  Dockerfile  README.md  TESTS.md  docker-compose.chroma.yml  docker-compose.qdrant.yml
.github/workflows/: benchmark.yml
crates/nt_cli/: Cargo.toml
crates/nt_cli/src/: main.rs
crates/nt_core/: Cargo.toml
crates/nt_core/src/: error.rs  lib.rs  models.rs  storage.rs  types.rs
crates/nt_inference/: Cargo.toml
crates/nt_inference/src/: lib.rs
crates/nt_inference/src/divergence/: mod.rs
crates/nt_inference/src/embeddings/: mod.rs
crates/nt_inference/src/models/: deepseek.rs  dummy.rs  langchain.rs  mod.rs
crates/nt_progress/: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  TESTS.md  TODO.md  commit_msg.txt
crates/nt_progress/.cursor/rules/: code-structure.mdc  documentation-and-commit.mdc  error-handling.mdc  mode-implementation.mdc  testing-guidelines.mdc
crates/nt_progress/benches/: terminal.rs
crates/nt_progress/src/: error_recovery.rs  errors.rs  formatter.rs  io.rs  lib.rs  progress_bar.rs  progress_manager.rs  renderer.rs  test_utils.rs  tests.rs  thread.rs
crates/nt_progress/src/config/: capabilities.rs  config.rs  config_impl.rs  mod.rs  mode_parameters.rs
crates/nt_progress/src/core/: base_config.rs  job_statistics.rs  job_traits.rs  mod.rs  thread_config.rs
crates/nt_progress/src/io/: custom.rs  default_factory.rs  file_io.rs  io_trait.rs  memory_io.rs  mod.rs  network_io.rs
crates/nt_progress/src/modes/: README.md  base_config.rs  capturing.rs  config.rs  factory.rs  limited.rs  mod.rs  thread_config.rs  window.rs  window_base.rs  window_with_title.rs
crates/nt_progress/src/terminal/: cursor.rs  event.rs  mod.rs  size.rs  style.rs  test_env.rs  test_helpers.rs  text.rs
crates/nt_progress/src/tests/: capturing.rs  common.rs  custom_writer.rs  display.rs  error_handling.rs  io.rs  io_factory.rs  limited.rs  mod.rs  passthrough.rs  terminal.rs  test_builder.rs  test_builder_example.rs  thread.rs  window.rs  window_with_title.rs
crates/nt_progress/src/ui/: formatter.rs  mod.rs  renderer.rs
crates/nt_progress/src/ui/progress_bar/: bar.rs  config.rs  mod.rs  multi.rs  style.rs
crates/nt_progress/tests/: common.rs  hierarchical_jobs.rs  job_status.rs  mod.rs  progress.rs  terminal.rs
crates/nt_scrappers/: Cargo.toml
crates/nt_scrappers/src/: cli.rs  lib.rs  logging.rs  manager.rs
crates/nt_scrappers/src/scrapers/: jsonld.rs  mod.rs
crates/nt_scrappers/src/scrapers/argentina/: clarin.rs  lanacion.rs  lavoz.rs  mod.rs
crates/nt_storage/: Cargo.toml
crates/nt_storage/src/: lib.rs
crates/nt_storage/src/backends/: chroma.rs  memory.rs  mod.rs  qdrant.rs  sqlite.rs
crates/nt_web/: Cargo.toml
crates/nt_web/src/: handlers.rs  lib.rs  routes.rs  state.rs
docker/: Dockerfile  Dockerfile.chroma  Dockerfile.ollama  docker-compose.chroma.yml  docker-compose.qdrant.yml
src/: main.rs
