[workspace]
members = [
    "crates/nt_core",
    "crates/nt_scrappers",
    "crates/nt_web",
    "crates/nt_inference",
    "crates/nt_cli",
    "crates/nt_storage",
    "crates/nt_progress"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
langchain = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
kdam = { version = "0.6.2", features = ["spinner", "template", "unicode"] }
crossterm = "0.27"
futures = "0.3"
