[package]
name = "nt_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nt"
path = "src/main.rs"

[dependencies]
nt_core = { path = "../nt_core" }
nt_storage = { path = "../nt_storage", features = ["qdrant", "chroma", "sqlite"] }
nt_scrappers = { path = "../nt_scrappers" }
nt_web = { path = "../nt_web" }
nt_inference = { path = "../nt_inference" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
tracing-subscriber = "0.3"
tui = "0.19.0"
crossterm = "0.26.1"

[features]
default = []
chroma = []
qdrant = []
sqlite = [] 