[package]
name = "nt_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
chromadb = { workspace = true }
reqwest = { version = "0.11", features = ["json"] } 