[package]
name = "nt_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.11", features = ["json"] } 