[package]
name = "nt_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = "1.0"
anyhow = "1.0"
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
nt_core = { path = "../nt_core" }
reqwest = { version = "0.11", features = ["json"] } 