[package]
name = "nt_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = "1.0"
anyhow = "1.0"
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
nt_core = { path = "../nt_core" }
nt_storage = { path = "../nt_storage" }
reqwest = { version = "0.11", features = ["json"] }
futures-util = { workspace = true }

[features]
qdrant = ["dep:langchain-rust"]
sqlite = ["dep:langchain-rust"]
ollama = ["dep:langchain-rust"]

[dependencies.langchain-rust]
version = "4.6.0"
features = ["qdrant", "ollama"]
optional = true 