[package]
name = "nt_progress"
version = "0.1.17"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
crossterm = { version = "0.29", features = ["event-stream"] }
vt100 = "0.15"
futures = "0.3"
rand = "0.8"
serial_test = "2.0"
stdio-override = "0.2"
mio = { version = "0.8", features = ["os-poll"] }
libc = "0.2"
unicode-segmentation = "1.10"


[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "terminal"
harness = false

[lib]
doctest = false
