[package]
name = "nt_progress"
version = "0.1.43"
edition = "2021"
authors = ["xaiki <xaiki@evilgiggle.com>"]
description = "A library for displaying progress bars and managing progress tracking across multiple threads"
license = "MIT"
repository = "https://github.com/nt/nt_progress"
readme = "README.md"
keywords = ["progress", "terminal", "display", "thread-safe", "async"]
categories = ["command-line-interface", "asynchronous", "terminal"]

[dependencies]
tokio = { version = "1.36.0", features = ["full", "macros"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
chrono = "0.4.34"
humantime = "2.1.0"
unicode-width = "0.1"
unicode-segmentation = "1.10"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11.2"
vt100 = "0.15.2"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5.1"

[lib]
doctest = false
