[package]
name = "nt_scrappers"
version = "0.1.0"
edition = "2021"

[dependencies]
nt_core = { path = "../nt_core" }
scraper = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true } 