[package]
name = "nt_scrappers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
nt_core = { path = "../nt_core" }
nt_inference = { path = "../nt_inference" }
nt_storage = { path = "../nt_storage" }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
lazy_static = "1.4"
sha2 = "0.10"
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = "0.3" 