[package]
name = "nt_scrappers"
version = "0.1.0"
edition = "2021"

[dependencies]
nt_core = { path = "../nt_core" }
nt_inference = { path = "../nt_inference" }
nt_storage = { path = "../nt_storage" }
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
scraper = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
lazy_static = "1.4"
sha2 = "0.10"
futures = { workspace = true }
log = "0.4"
crossterm = "0.27"
nt_progress = { path = "../nt_progress" }
env_logger = "0.11" 