[package]
name = "nt_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
nt_core = { path = "../nt_core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }

[features]
default = []
qdrant = ["dep:qdrant-client", "dep:uuid"]
chroma = ["dep:chromadb"]
sqlite = ["dep:sqlx"]

[dependencies.qdrant-client]
version = "1.7.0"
optional = true

[dependencies.uuid]
version = "1.7"
features = ["v4"]
optional = true

[dependencies.chromadb]
version = "0.3.1"
optional = true

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "sqlite", "chrono", "json"]
optional = true

[dev-dependencies]
tempfile = "3.8"
